<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Camera Preview Surface (stub for now, will be updated to TextureView) -->
    <FrameLayout
        android:id="@+id/cameraPreviewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Overlay UI Text -->
    <TextView
        android:id="@+id/statusOverlayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:textColor="#FFFFFF"
        android:text="@string/tap_to_take_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnKeep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep"
        android:visibility="gone"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"/>

    <Button
        android:id="@+id/btnRetake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retake"
        android:visibility="gone"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
